# tem-stem-atom-locator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  项目书.md
atom_locator/: __init__.py  autotune.py  cli.py  config.py  data_io.py  detect.py  export.py  fill.py  graph.py  mask.py  periodic.py  pipeline.py  preprocess.py  refine.py  visualize.py
backend/: __init__.py  app.py
macos/AtomLocatorMac/: Package.swift
macos/AtomLocatorMac/Sources/AtomLocatorMac/: ContentView.swift  main.swift
scripts/: run_smoke.sh  setup.sh  smoke_test.py  start_app.sh  start_backend.sh  start_web.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css
